404 Error page update and Forgot-passwrd Functinality add

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -15,6 +15,9 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
+            <br>
+            <a href="/forgot">Forgot Password?</a>
+           
         </form>
     </div>
 </body>
