--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -13,6 +13,7 @@
             <nav>
                 <ul>
                     <li><a href="">{{user.username}}</a></li>
+                    <li><a href="login">Logout</a></li>
                   
                 </ul>
             </nav>
