--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,7 +10,7 @@
     <!-- Header -->
     <header>
         <div class="container">
-             <img src="travel.png" alt="Production House Logo" class="logo">
+             <img src="/travel.png" alt="Production House Logo" class="logo">
             <nav>
                 <ul>
                     <li><a href="#services">Services</a></li>
