--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
-    <link rel="stylesheet" href="stylesLog.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="stylesLog.css">
+     <!-- Link to your CSS file -->
 </head>
 <body>
     <div class="login-container">
