--- a/views/error.hbs
+++ b/views/error.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 error</title>
-    <link rel="stylesheet" href="styleserror.css">
+    <link rel="stylesheet" href="/styleserror.css">
 </head>
 <body>
     <form id="application-form">
