--- a/views/forgot.hbs
+++ b/views/forgot.hbs
@@ -10,15 +10,24 @@
     <div class="container">
         <h2>Forgot Password</h2>
         <br><br>
-        <form action="/forgot" method="POST">
-            <div>
-                <label for="email">Enter your email:</label>
-                <input type="email" name="email" id="email" required>
-            </div>
+       <form action="/send-mail" method="POST">
+        <label for="email">Enter your email:</label>
+        <input type="email" id="email" name="email" required>
+        <button type="submit">Send OTP</button>
+    </form>
+
+     <form action="/verify-otp" method="POST">
+        <label for="email">Enter your email:</label>
+        <input type="email" id="otp-email" name="email" required>
+        <label for="otp">Enter your OTP:</label>
+        <input type="text" id="otp" name="otp" required>
+        <button type="submit">Verify OTP</button>
             <br><br>
-            <button type="submit">Reset Password</button>
-            <button type="submit" onclick="goBack()">Back to Login</button>
+          <a href='restpassword'><button>Reset Password</button></a>
+            </div>
+             <button type="submit" onclick="goBack()">Back to Login</button>
         </form>
+    </form>
 
         <script>
             function goBack() {
