--- a/public/stylesreset.css
+++ b/public/stylesreset.css
@@ -17,8 +17,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 80px;
-    height: 60%;
-    width: 23%;
+    height: 40%;
 }
 
 h2 {
@@ -34,8 +33,8 @@ label {
     font-size: 14px;
     color: #555555;
 }
-input[type="text"]{
-    width: 90%;
+input[type="password"]{
+    width: 100%;
     padding: 10px;
     margin-bottom: 20px;
     border: 1px solid #dddddd;
@@ -43,17 +42,6 @@ input[type="text"]{
     font-size: 14px;
 
 }
-input[type="email"] {
-    width: 90%;
-    padding: 10px;
-    margin-bottom: 20px;
-    border: 1px solid #dddddd;
-    border-radius: 4px;
-    font-size: 14px;
-}
-
-
-
 button {
     padding: 0.75rem;
     border: none;
