--- a/views/resetpassword.hbs
+++ b/views/resetpassword.hbs
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="stylesreset.css"> <!-- Link to your CSS file -->
 </head>
 <body>
-    <div class="container">
+    <script>
+        alert("OTP verified successfully!");
+    </script>
+     <div class="container">
         <h2>Reset Password</h2>
         <form action="/reset-password" method="POST">
             <label for="new-password">Enter your new password:</label>
