--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -21,22 +21,45 @@
     </header>
    
         <marquee>Welcome to the Dashboard! {{user.username}}</marquee>
-    <section id="services" class="services">
-        <div class="container">
-            <h2>Our Services</h2>
-            <div class="service">
-                <h3>Video Production</h3>
-                <p>High-quality video production for various needs.</p>
-            </div>
-            <div class="service">
-                <h3>Photography</h3>
-                <p>Professional photography services for any occasion.</p>
-            </div>
-            <div class="service">
-                <h3>Post Production</h3>
-                <p>Editing and special effects to enhance your content.</p>
-            </div>
-        </div>
+        <div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="apple12.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>i Pad</h2>
+        <p class="title">iPhone (7th Gen)</p>
+        <p>-32 GB ROM<br>
+           -25.91 cm HD Display <br>    
+           -8 MP Primary Camera<br>
+           -Battery: Lithium Polymer<br>
+           -Processor: A10 Fusion Chip</p>
+        <p>apple@example.com</p>
+        <a href="https://iamdeepak199.stores.instamojo.com/product/3226245/i-pad/"><p><button class="button">Buy Now</button></p></a>
+      </div>
+    </div>
+  </div>
+
+  
+        
+        <div class="column">
+    <div class="card">
+      <img src="apple11pro.jpg" alt="Mike" style="width:107%">
+      <div class="container">
+        <h2>iPhone 12</h2>
+        <p class="title">iPhone12 </p>
+        <p>-256 GB ROM<br>
+           -15.49 cm (6.1 inch) Super Retina XDR Display<br>
+           -12MP+12MP+12MP | 12MP Camera<br>
+           -A14 Bionic </p>
+        <p>apple@example.com</p>
+       <a href="https://iamdeepak199.stores.instamojo.com/product/3226252/iphone-12-pro-7d00c/"><p><button class="button">Buy Now</button></p></a>
+      </div>
+    </div>
+  </div>
+  
+        
+
+       
     </section>
     
     <!-- Add other dashboard content here -->
